chore: cleanup and small refactorings
more small refactorings

Refs: XRDDEV-2625